# TuckerMPI

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
src/: CMakeLists.txt
src/input_files/: input_test_filename_single.txt  input_test_filenames_single.txt  lq_data.txt  lq_edgecase_input.txt  lq_edgecase_output.txt  output_test_filename_single.txt  output_test_filenames_single.txt  svd_test_input.txt  svd_test_outputU.txt
src/input_files/reconstruction/: paramfile.txt
src/kokkos/: AM_GoogleTests.cpp  CMakeLists.txt  Tucker_IO_Util.cpp  Tucker_IO_Util.hpp  Tucker_SizeArray.hpp  Tucker_sthosvd.cpp  api_classes.md  api_free_funcs.md  basic_build.sh  build_instruction.md  compute_gram.hpp  init_args.hpp  revise.hpp  ttm.hpp
src/kokkos/drivers/: CmdLineParse.cpp  ParameterFileParserUtils.cpp  ParameterFileParserUtils.hpp
src/kokkos/drivers_tests/: CMakeLists.txt  ascii_to_binary.py  compare_core_tensor.py  compare_eigenvalues.py  test.cmake
src/kokkos/mpi-distributed/: CMakeLists.txt  TuckerMpi_CoreTensorTruncator.hpp  TuckerMpi_Distribution.cpp  TuckerMpi_Distribution.hpp  TuckerMpi_MPIWrapper.cpp  TuckerMpi_MPIWrapper.hpp  TuckerMpi_Map.cpp  TuckerMpi_Map.hpp  TuckerMpi_Matrix.hpp  TuckerMpi_ProcessorGrid.cpp  TuckerMpi_ProcessorGrid.hpp  TuckerMpi_Tensor.hpp  TuckerMpi_sthosvd.hpp  TuckerMpi_ttm.hpp
src/kokkos/on-node/: CMakeLists.txt  TuckerOnNode_ComputeGram.hpp  TuckerOnNode_CoreTensorTruncator.hpp  TuckerOnNode_Tensor.hpp  TuckerOnNode_Tensor_IO.hpp  TuckerOnNode_TuckerTensor.hpp  TuckerOnNode_sthosvd.hpp  TuckerOnNode_ttm.hpp
src/kokkos/shared/: Tucker_BoilerPlate_IO.cpp  Tucker_BoilerPlate_IO.hpp  Tucker_CmdLineParse.cpp  Tucker_CmdLineParse.hpp  Tucker_ParameterFileParserUtils.cpp  Tucker_ParameterFileParserUtils.hpp  Tucker_SizeArray.cpp  Tucker_SizeArray.hpp
src/kokkos/src/: TuckerMpi.hpp  TuckerMpi_Distribution.cpp  TuckerMpi_Distribution.hpp  TuckerMpi_ISVD.cpp  TuckerMpi_ISVD.hpp  TuckerMpi_Map.cpp  TuckerMpi_Map.hpp  TuckerMpi_Matrix.hpp  TuckerMpi_ProcessorGrid.cpp  TuckerMpi_ProcessorGrid.hpp  TuckerMpi_StreamingTuckerTensor.cpp  TuckerMpi_StreamingTuckerTensor.hpp  TuckerMpi_Tensor.hpp  TuckerMpi_Tensor_IO.hpp  TuckerMpi_Tensor_io.hpp  TuckerMpi_TuckerTensor.hpp  TuckerMpi_compute_gram.hpp  TuckerMpi_compute_slice_metrics.hpp  TuckerMpi_normalize_tensor.hpp  TuckerMpi_perform_preprocessing.hpp  TuckerMpi_print_max_mem_usage.hpp  TuckerMpi_sthosvd.hpp  TuckerMpi_ttm.hpp  TuckerMpi_write_statistics.hpp  TuckerOnNode.hpp  TuckerOnNode_ComputeGram.hpp  TuckerOnNode_ISVD.cpp  TuckerOnNode_ISVD.hpp  TuckerOnNode_MetricData.hpp  TuckerOnNode_StreamingTuckerTensor.cpp  TuckerOnNode_StreamingTuckerTensor.hpp  TuckerOnNode_Tensor.hpp  TuckerOnNode_TensorGramEigenvalues.hpp  TuckerOnNode_Tensor_IO.hpp  TuckerOnNode_Tensor_io.hpp  TuckerOnNode_TuckerTensor.hpp  TuckerOnNode_compute_gram.hpp  TuckerOnNode_compute_slice_metrics.hpp  TuckerOnNode_normalize_tensor.hpp  TuckerOnNode_perform_preprocessing.hpp  (+27 more)
src/kokkos/tests/: CMakeLists.txt
src/kokkos/unit_tests/: CMakeLists.txt
src/kokkosonly/: CMakeLists.txt  Tucker.hpp  Tucker_BlasWrapper.cpp  Tucker_BlasWrapper.hpp  Tucker_BoilerPlate_IO.hpp  Tucker_ComputeGram.hpp  Tucker_CoreTensorTruncationStrategies.hpp  Tucker_CoreTensorTruncator.hpp  Tucker_IO_Util.cpp  Tucker_IO_Util.hpp  Tucker_SizeArray.hpp  Tucker_Tensor.hpp  Tucker_TuckerTensor.hpp  Tucker_sthosvd.hpp  Tucker_ttm.hpp  compute_gram.hpp  init_args.hpp  ttm.hpp
src/kokkosonly/drivers/: Tucker_ParameterFileParser.hpp  Tucker_ParameterFileParserUtils.hpp  Tucker_sthosvd.cpp
src/kokkosonly/impl/: Tucker_ttm_using_host_blas.hpp  Tucker_ttm_using_kokkos_kernels.hpp
src/kokkosonly/tests/: CMakeLists.txt  InitTensorAndMatrixForTesting.hpp  Tensor_2d_XxY_order.hpp  Tensor_2x3x5_random.hpp  Tensor_3d_2x3x5_random.hpp  tensor.cc  tucker_kokkosonly_tensor.cc  tucker_kokkosonly_ttm_1dtensor.cc  tucker_kokkosonly_ttm_file.cc  tucker_kokkosonly_ttm_nofile.cc  tucker_kokkosonly_ttm_tensor2d_generalize.cc  tucker_kokkosonly_ttm_using_kernels_gemm.cc
src/kokkosshared/: Tucker_BoilerPlate_IO.cpp  Tucker_BoilerPlate_IO.hpp  Tucker_CmdLineParse.cpp  Tucker_CmdLineParse.hpp  Tucker_ParameterFileParserUtils.cpp  Tucker_SizeArray.hpp  Tucker_Tensor.hpp
src/mpi/: CMakeLists.txt  TuckerMPI.cpp  TuckerMPI.hpp  TuckerMPI_Distribution.cpp  TuckerMPI_Distribution.hpp  TuckerMPI_IO_Util.hpp  TuckerMPI_MPIWrapper.cpp  TuckerMPI_MPIWrapper.hpp  TuckerMPI_Map.cpp  TuckerMPI_Map.hpp  TuckerMPI_Matrix.cpp  TuckerMPI_Matrix.hpp  TuckerMPI_ProcessorGrid.cpp  TuckerMPI_ProcessorGrid.hpp  TuckerMPI_Tensor.cpp  TuckerMPI_Tensor.hpp  TuckerMPI_TuckerTensor.hpp  TuckerMPI_Util.cpp  TuckerMPI_Util.hpp  TuckerMPI_ttm.cpp  TuckerMPI_ttm.hpp
src/mpi-kokkos/: CMakeLists.txt  MpiKokkos_Tucker_SizeArray.cpp  MpiKokkos_Tucker_SizeArray.hpp  TuckerKokkos_Tensor.hpp  TuckerMPI_Distribution.hpp  TuckerMPI_ProcessorGrid.cpp  TuckerMpiKokkos_sthosvd.cpp  Tucker_IO_Util.hpp  Tucker_MemManager.cpp  Tucker_MemManager.hpp  Tucker_SizeArray.hpp  init_args.hpp
src/mpi-kokkos/drivers/: MpiKokkos_Tucker_CmdLineParse.cpp  MpiKokkos_Tucker_ParameterFileParser.hpp  MpiKokkos_Tucker_ParameterFileParserUtils.cpp  MpiKokkos_Tucker_ParameterFileParserUtils.hpp  MpiKokkos_Tucker_sthosvd.cpp  TuckerMPI_sthosvd.cpp
src/mpi/converter/: CMakeLists.txt  TuckerMPI_converter.cpp
src/mpi/drivers/: .#TuckerMPI_sthosvd.cpp  CMakeLists.txt  TuckerMPI_LQ.cpp  TuckerMPI_general_reconstruct.cpp  TuckerMPI_generate.cpp  TuckerMPI_gram.cpp  TuckerMPI_reconstruct.cpp  test.cpp  (+12 more)
src/serial/: CMakeCache.txt  CMakeLists.txt  Makefile  Tucker.cpp  Tucker.hpp  Tucker_BlasWrapper.cpp  Tucker_BlasWrapper.hpp  Tucker_IO_Util.cpp  Tucker_IO_Util.hpp  Tucker_ISVD.cpp  Tucker_ISVD.hpp  Tucker_Matrix.hpp  Tucker_Metric.hpp  Tucker_SizeArray.hpp  Tucker_SparseMatrix.cpp  Tucker_SparseMatrix.hpp  Tucker_StreamingTuckerTensor.cpp  Tucker_StreamingTuckerTensor.hpp  Tucker_Tensor.cpp  Tucker_Tensor.hpp  Tucker_Timer.cpp  Tucker_Timer.hpp  Tucker_TuckerTensor.hpp  Tucker_Util.cpp  Tucker_Util.hpp  Tucker_Vector.hpp  cmake_install.cmake
(+391 files in other folders)
