PROJECT(Tucker)
INCLUDE(CTest)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

# SET(BLA_VENDOR Intel10_64lp_seq)
FIND_PACKAGE(BLAS REQUIRED)
FIND_PACKAGE(LAPACK REQUIRED)
FIND_PACKAGE(MPI)

SET(EXECUTABLE_OUTPUT_PATH bin)

ENABLE_TESTING()

ADD_SUBDIRECTORY(serial)

option(TUCKER_ENABLE_KOKKOS OFF)
IF(TUCKER_ENABLE_KOKKOS)
  ADD_SUBDIRECTORY(kokkos)
ENDIF()

IF(MPI_CXX_FOUND)
  ADD_SUBDIRECTORY(mpi)
  ADD_SUBDIRECTORY(mpi-kokkos)
ENDIF()
