PROJECT(Tucker)
INCLUDE(CTest)

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

# SET(BLA_VENDOR Intel10_64lp_seq)
FIND_PACKAGE(BLAS REQUIRED)
FIND_PACKAGE(LAPACK REQUIRED)
IF(TUCKER_ENABLE_MPI)
  FIND_PACKAGE(MPI)
ENDIF()

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x")

SET(EXECUTABLE_OUTPUT_PATH bin)

ENABLE_TESTING()

ADD_SUBDIRECTORY(serial)
IF(TUCKER_ENABLE_MPI AND MPI_CXX_FOUND)
  ADD_SUBDIRECTORY(mpi)
ENDIF()
