
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x")

INCLUDE_DIRECTORIES(../serial ${MPI_CXX_INCLUDE_PATH})
FILE(GLOB SOURCES "*.cpp")
ADD_LIBRARY(mpi_tucker SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(mpi_tucker serial_tucker ${MPI_CXX_LIBRARIES})

ADD_SUBDIRECTORY(drivers)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(converter)
