
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x")

FILE(GLOB SOURCES "*.cpp")
ADD_LIBRARY(serial_tucker SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(serial_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(compare)
ADD_SUBDIRECTORY(drivers)
